--- a/simpleform.html
+++ b/simpleform.html
@@ -10,9 +10,9 @@
 	<div class="container">
 	<form class="signup-form">
 		<h1 class="form-head">Please Sign Up</h1>
-		 <input class="form-input" type="name" size="40" name="first-name" placeholder="First Name"><br>
-		 <input class="form-input" type="name" size="40" name="last-name" placeholder="Last Name"><br>
-		 <input class="form-input" type="email" size="40" name="email-address" placeholder="Email Address"><br>
+		 <input class="form-input" type="name"  name="first-name" placeholder="First Name"><br>
+		 <input class="form-input" type="name"  name="last-name" placeholder="Last Name"><br>
+		 <input class="form-input" type="email" name="email-address" placeholder="Email Address"><br>
 		 <input class="form-input" type="submit" value="SIGN UP">
 	</form>
 	</div>
