--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<h1 class="page-head"> Welcome To Signup.com </h1>
 	<form class="signup-form">
 		<h1 class="form-head">Please Sign Up</h1>
-		 <input class="form-input" type="name"  name="first-name" placeholder="First Name"><br>
-		 <input class="form-input" type="name"  name="last-name" placeholder="Last Name"><br>
+		 <input class="form-input" type="text"  name="first-name" placeholder="First Name"><br>
+		 <input class="form-input" type="text"  name="last-name" placeholder="Last Name"><br>
 		 <input class="form-input" type="email" name="email-address" placeholder="Email Address"><br>
 		 <input class="form-input" type="submit" value="SIGN UP">
 	</form>
